--- a/style.css
+++ b/style.css
@@ -73,17 +73,19 @@ tbody tr:hover {
 }
 
 .hero {
-  position: relative;
+  width: 100%;
+  height: 280px;              /* controls header height */
   background-image: url("header.jpg");
-  background-size: cover;
+  background-size: cover;     /* THIS fixes scaling */
   background-position: center;
-  height: 280px;
+  background-repeat: no-repeat;
+
   display: flex;
   align-items: center;
   justify-content: center;
-  color: white;
   text-align: center;
 }
+
 
 .hero::before {
   content: "";
@@ -113,3 +115,4 @@ tbody tr:hover {
   margin: 40px auto;
   padding: 0 20px;
 }
+
